--- a/index.html
+++ b/index.html
@@ -2,9 +2,91 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Who is Sai Manam?</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href=".\static\CSS\styles.css" rel="stylesheet"> <!-- Link to external CSS file -->
 </head>
 <body>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-light bg-light d-md-none fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">  </span>
+                <a class="menu">Menu</a>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#section1">Section 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#section2">Section 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#section3">Section 3</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#section4">Section 4</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
+    <div class="sidenav d-none d-md-flex flex-column align-items-center">
+        <img src=".\static\images\profile.jpg" alt="Profile Image" class="img-fluid img-profile rounded-circle mx-auto mb-2">
+        <a href="#section1">Section 1</a>
+        <a href="#section2">Section 2</a>
+        <a href="#section3">Section 3</a>
+        <a href="#section4">Section 4</a>
+    </div>
+
+    <!-- Page content -->
+    <div class="main">
+        <h2>Main Content</h2>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
