--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#section1">Section 1</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#section2">Section 2</a>
+                        <a class="nav-link" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#section3">Section 3</a>
+                        <a class="nav-link" href="#Projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#section4">Section 4</a>
+                        <a class="nav-link" href="#education">Education</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Skills">Skills</a>
+                    </li>
+
                 </ul>
             </div>
         </nav>
@@ -35,48 +39,42 @@
 
     <div class="sidenav d-none d-md-flex flex-column align-items-center">
         <img src=".\static\images\profile.jpg" alt="Profile Image" class="img-fluid img-profile rounded-circle mx-auto mb-2">
-        <a href="#section1">Section 1</a>
-        <a href="#section2">Section 2</a>
-        <a href="#section3">Section 3</a>
-        <a href="#section4">Section 4</a>
+        <a href="#about">About</a>
+        <a href="#Experience">Experience</a>
+        <a href="#Projects">Projects</a>
+        <a href="#Education">Education</a>
+        <a href="#Skills">Skills</a>
+
     </div>
 
     <!-- Page content -->
     <div class="main">
-        <h2>Main Content</h2>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p><p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-        <p>This is the main content area. On large screens, the side navigation panel will be fixed on the left side and will occupy 1/5th of the screen width. On small screens, it will behave as a regular navigation bar.</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <h2>About</h2>
+        <p>
+            Hello! I'm Sai Manam, an energetic and passionate data science student dedicated to leveraging technology
+            for a better tomorrow. Currently pursuing a Master of Science in Data Science and Analytics at Georgia State
+            University, I specialize in Big Data and Machine Learning. I have a strong foundation in software
+            engineering and a keen interest in learning new technologies and languages.
+        </p>
+        <p>
+            With a solid background in Python, Java, C, SQL, and more, along with hands-on experience in tools like
+            Tableau, Docker, and Google Cloud Platform, I excel in both backend and frontend development. My machine
+            learning expertise includes PyTorch, TensorFlow, and time series modeling, and I am certified as a GCP
+            Associate Cloud Engineer and AWS Cloud Practitioner.
+            </p>
+        <p>
+            My professional experiences include working as a Graduate Research Assistant at NASA's Data Mining Lab and
+            as a Programmer Analyst Intern at Cognizant. These roles have honed my skills in data integration, API
+            development, and building scalable data pipelines.
+            </p>
+        <p>
+            Driven by a passion for problem-solving and continuous learning, I am committed to using my skills to make a
+            positive impact through innovative technological solutions.
+            </p>
+        <p>
+            Thank you for visiting my portfolio. Feel free to explore my projects and experiences, and let's connect if
+            you share my enthusiasm for technology and data science.
+        </p>
 
 
 
