--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who is Sai Manam?</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href=".\static\CSS\styles.css" rel="stylesheet"> <!-- Link to external CSS file -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"> <!-- Include Font Awesome -->
+    <link href="./static/CSS/styles.css" rel="stylesheet"> <!-- Link to external CSS file -->
 </head>
+
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-light bg-light d-md-none fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">  </span>
+                <span class="navbar-toggler-icon"></span>
                 <a class="menu">Menu</a>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -23,64 +26,90 @@
                         <a class="nav-link" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Projects">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Skills">Skills</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
-
                 </ul>
             </div>
         </nav>
     </div>
 
     <div class="sidenav d-none d-md-flex flex-column align-items-center">
-        <img src=".\static\images\profile.jpg" alt="Profile Image" class="img-fluid img-profile rounded-circle mx-auto mb-2">
+        <img src="./static/images/profile.jpg" alt="Profile Image" class="img-fluid img-profile rounded-circle mx-auto mb-2">
+        <h2 class="heading">Sai Manam </h2>
         <a href="#about">About</a>
-        <a href="#Experience">Experience</a>
-        <a href="#Projects">Projects</a>
-        <a href="#Education">Education</a>
-        <a href="#Skills">Skills</a>
-
+        <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
+        <a href="#education">Education</a>
+        <a href="#skills">Skills</a>
+        <!-- LinkedIn and GitHub Icons -->
+        <div class="social-icons d-flex justify-content-center mt-3">
+            <a href="https://www.linkedin.com/in/saisubhashm" target="_blank" class="mx-2">
+                <i class="fab fa-linkedin fa-2x"></i>
+            </a>
+            <a href="https://github.com/saisubhash9" target="_blank" class="mx-2">
+                <i class="fab fa-github fa-2x"></i>
+            </a>
+            <a href="mailto:saisubhash654@gmail.com" target="_blank" class="mx-2">
+                <i class="far fa-envelope fa-2x"></i>
+            </a>
+        </div>
     </div>
 
     <!-- Page content -->
     <div class="main">
-        <h2>About</h2>
-        <p>
-            Hello! I'm Sai Manam, an energetic and passionate data science student dedicated to leveraging technology
-            for a better tomorrow. Currently pursuing a Master of Science in Data Science and Analytics at Georgia State
-            University, I specialize in Big Data and Machine Learning. I have a strong foundation in software
-            engineering and a keen interest in learning new technologies and languages.
-        </p>
-        <p>
-            With a solid background in Python, Java, C, SQL, and more, along with hands-on experience in tools like
-            Tableau, Docker, and Google Cloud Platform, I excel in both backend and frontend development. My machine
-            learning expertise includes PyTorch, TensorFlow, and time series modeling, and I am certified as a GCP
-            Associate Cloud Engineer and AWS Cloud Practitioner.
+        <div id="about">
+            <h2>About</h2>
+            <p>
+                Hello! I'm Sai Manam, an energetic and passionate data science student dedicated to leveraging technology
+                for a better tomorrow. Currently pursuing a Master of Science in Data Science and Analytics at Georgia State
+                University, I specialize in Big Data and Machine Learning. I have a strong foundation in software
+                engineering and a keen interest in learning new technologies and languages.
             </p>
-        <p>
-            My professional experiences include working as a Graduate Research Assistant at NASA's Data Mining Lab and
-            as a Programmer Analyst Intern at Cognizant. These roles have honed my skills in data integration, API
-            development, and building scalable data pipelines.
+            <p>
+                With a solid background in Python, Java, C, SQL, and more, along with hands-on experience in tools like
+                Tableau, Docker, and Google Cloud Platform, I excel in both backend and frontend development. My machine
+                learning expertise includes PyTorch, TensorFlow, and time series modeling, and I am certified as a GCP
+                Associate Cloud Engineer and AWS Cloud Practitioner.
             </p>
-        <p>
-            Driven by a passion for problem-solving and continuous learning, I am committed to using my skills to make a
-            positive impact through innovative technological solutions.
+            <p>
+                My professional experiences include working as a Graduate Research Assistant at NASA's Data Mining Lab and
+                as a Programmer Analyst Intern at Cognizant. These roles have honed my skills in data integration, API
+                development, and building scalable data pipelines.
             </p>
-        <p>
-            Thank you for visiting my portfolio. Feel free to explore my projects and experiences, and let's connect if
-            you share my enthusiasm for technology and data science.
-        </p>
+            <p>
+                Driven by a passion for problem-solving and continuous learning, I am committed to using my skills to make a
+                positive impact through innovative technological solutions.
+            </p>
+            <p>
+                Thank you for visiting my portfolio. Feel free to explore my projects and experiences, and let's connect if
+                you share my enthusiasm for technology and data science.
+            </p>
+        </div>
+        <div id="experience">
+            <h2>Experience</h2>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
 
+        <div id="projects">
+            <h2>Projects</h2>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
 
+        <div id="education">
+            <h2>Education</h2>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
 
-
-
-
+        <div id="skills">
+            <h2>Skills</h2>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
